--- a/setup.cfg
+++ b/setup.cfg
@@ -1,9 +1,11 @@
 [metadata]
 name = django-djaesy
-version = 0.0.1
+version = 0.1.0
 description = Tool for easy application building with Django
 long_description = file:README.rst
 url = https://github.com/gustavo80br/django-djaesy
+author= Gustavo Gonçalves
+author_email = gustavo@gemtech.net.br
 license = MIT
 classifiers =
     Development Status :: 4 - Beta
@@ -19,8 +21,10 @@ classifiers =
 
 [options]
 include_package_data = true
-python_requires = >=3.6
-setup_requires = 
+python_requires = >=3.8
+zip_safe = false
+include_package_data = true
+setup_requires =
     setuptools >= 38.3.0
 install_requires =
     Django==3.2.5
@@ -52,3 +56,7 @@ install_requires =
     whitenoise[brotli]==5.3.0
     markdown==3.3.4
 test_suite = tests.get_suite
+
+[options.entry_points]
+console_scripts =
+    djaesy-admin = djaesy.core.djaesy_admin
