--- a/setup.cfg
+++ b/setup.cfg
@@ -58,4 +58,4 @@ test_suite = tests.get_suite
 
 [options.entry_points]
 console_scripts =
-    djaesy-admin = djaesy.core.djaesy_admin
+    djaesy-admin = djaesy.management.commands.djaesy_admin:main
