Start project script

--- a/setup.cfg
+++ b/setup.cfg
@@ -58,4 +58,4 @@ test_suite = tests.get_suite
 
 [options.entry_points]
 console_scripts =
-    djaesy-admin = djaesy.management.commands.djaesy_admin:main
+    start-djaesy = djaesy.start_project:main
