--- a/setup.cfg
+++ b/setup.cfg
@@ -21,6 +21,7 @@ classifiers =
 
 [options]
 include_package_data = true
+packages = find:
 python_requires = >=3.8
 zip_safe = false
 setup_requires =
@@ -59,3 +60,6 @@ test_suite = tests.get_suite
 [options.entry_points]
 console_scripts =
     start-djaesy = djaesy.start_project:main
+
+[options.package_data]
+djaesy = *
