--- a/setup.cfg
+++ b/setup.cfg
@@ -21,7 +21,7 @@ classifiers =
 
 [options]
 include_package_data = true
-packages = find:
+packages = djaesy
 python_requires = >=3.8
 zip_safe = false
 setup_requires =
@@ -62,4 +62,4 @@ console_scripts =
     start-djaesy = djaesy.start_project:main
 
 [options.package_data]
-djaesy = *
+djaesy = *.*
